<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/NombreLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameList"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cantidadProducots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cantidadProdcutos" />

        <TextView
            android:id="@+id/MostrarCantidadProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ettCantidad" />
    </LinearLayout>

</LinearLayout>